[project]
name = "gsd-config"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Mikhailov",email = "mikhailov.ivan.imc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gsd (>=3.4.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

